# learning-tdd

./: CHANGELOG.md  learning-tdd.cabal
.github/workflows/: haskell.yml
app/: Main.hs
lib/Stocks/: Bank.hs  Money.hs  Portfolio.hs
test/: Main.hs
