cabal-version:      2.4
name:               learning-tdd
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Code from "Learning Test-Driven Development" by Saleem Siddiqui

-- A longer description of the package.
description: Code from "Learning Test-Driven Development" by Saleem Siddiqui but ported to Haskell/Hspec

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christopher Wilson
maintainer:         christopher.j.wilson@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable learning-tdd
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.1.0
                    , hspec
    hs-source-dirs:   app
    default-language: Haskell2010
